[gd_scene load_steps=7 format=2]

[ext_resource path="res://assets/materials/luna_moth/hub_light.tres" type="Material" id=1]
[ext_resource path="res://luna_moth/lights/hub_light.gd" type="Script" id=2]
[ext_resource path="res://assets/meshes/luna_moth/GodRay.obj" type="ArrayMesh" id=3]
[ext_resource path="res://assets/materials/luna_moth/light/LightShaftMat.tres" type="Material" id=4]

[sub_resource type="CubeMesh" id=1]
size = Vector3( 0.005, 0.005, 0.35 )

[sub_resource type="SphereShape" id=2]
radius = 0.625153

[node name="HubLight" type="Area"]
script = ExtResource( 2 )

[node name="MeshInstance" type="MeshInstance" parent="."]
use_in_baked_light = true
mesh = SubResource( 1 )
material/0 = ExtResource( 1 )

[node name="CollisionShape" type="CollisionShape" parent="."]
shape = SubResource( 2 )

[node name="SpotLight" type="SpotLight" parent="."]
transform = Transform( -4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, -0.0918511, 0, 0 )
light_color = Color( 1, 0.678431, 0, 1 )
light_energy = 12.0
light_indirect_energy = 0.5
spot_range = 9.20202
spot_attenuation = 1.5
spot_angle = 46.5717
spot_angle_attenuation = 0.5

[node name="GodRays" type="MeshInstance" parent="SpotLight"]
transform = Transform( -4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 2.21037e-07, 0, -5.05675 )
cast_shadow = 0
mesh = ExtResource( 3 )
material/0 = ExtResource( 4 )

[connection signal="body_entered" from="." to="." method="_on_Area_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_Area_body_exited"]
